<resources>
    <string name="app_name">Trip BD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">Find Tour Places</string>
    <string name="view_listview">View List</string>
    <string name="marker_title">Title</string>
    <string name="marker_lat_n_long">Lat n Long</string>
    <string name="marker_details">Details</string>
    <string name="place_name_item">Place Name</string>
    <string name="view_mapview">View Map</string>
    <string name="view_in_map">View in Map</string>
    <string name="view_in_list">View in List</string>
    <string name="nav_sign_in">Profile</string>
    <string name="nav_hotels">Hotels</string>
    <string name="nav_restaurants">Restuarants</string>
    <string name="tools">Tools</string>
    <string name="nav_share_app">Share App</string>
    <string name="nav_like_us">Like Us</string>
    <string name="nav_about_us">About Us</string>
    <string name="welcome_to_tripbd">Welcome to Trip BD</string>
    <string name="sign_in">Sign In</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="sign_in_header">Sign in to Get your Profile</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_reg_hint">Username</string>
    <string name="nickname_reg_hint">Nickname</string>
    <string name="e_mail_reg_hint">E-mail</string>
    <string name="password_reg_hint">Password</string>
    <string name="confirm_password_reg_hint">Confirm Password</string>
    <string name="reg_btn_string">Register</string>
    <string name="contact_number_reg_hint">Contact Number</string>
    <string name="sign_in_please">Sign in Please</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home">Home</string>
    <string name="hire_guide">Hire a Guide</string>
    <string name="hotels">Hotels nearby</string>
    <string name="restuarants">Restaurants nearby</string>
    <string name="visited_check">Set Visited</string>
    <string name="review">Review</string>
    <string name="traveller">Traveller</string>
    <string name="create_an_account">Create An Account</string>
    <string name="fill_up_all_fields">Fill Up All Fields</string>
</resources>
