<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/ic_nav_sign_in"
            android:title="@string/nav_sign_in" />
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/ic_nav_hotel"
            android:title="@string/nav_hotels" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_nav_restuarant"
            android:title="@string/nav_restaurants" />
    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_share_app"
                android:icon="@drawable/ic_nav_share"
                android:title="@string/nav_share_app" />
            <item
                android:id="@+id/nav_like_us"
                android:icon="@drawable/ic_nav_like"
                android:title="@string/nav_like_us" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_action_name"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>
