<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="2dp">

    <TextView
        android:id="@+id/place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_title"
        android:textColor="@color/colorTripBDText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lat_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_lat_n_long"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_details"
        android:textSize="14sp" />

</LinearLayout>
